# strategic-influence

./: AGENT_COMPARISON_REPORT.md  AI_IMPROVEMENTS_SUMMARY.md  AI_RESEARCH_REPORT.md  ANALYSIS_COMPLETE.txt  DELIVERABLES.md  DEPTH_SEARCH_BUG_ANALYSIS.md  DESIGN_INDEX.md  DESIGN_READING_GUIDE.md  DESIGN_SUMMARY.md  FINAL_AI_REPORT.md  FINAL_ORCHESTRATION_REPORT.md  GAME_DESIGN_EXPLORATION.md  GAME_MANUAL.md  HEURISTIC_AGENT_SUMMARY.md  HEURISTIC_MINIMAX_FINDINGS.md  HEURISTIC_MINIMAX_README.md  HEX_VARIATION_DESIGN.md  IMPLEMENTATION_OVERVIEW.md  INDEX.md  INVESTIGATION_REPORT.md  MINIMAX_OPTIMIZATION_SUMMARY.md  NEW_GAME_DESIGNS.md  ORCHESTRATION_REPORT.md  PROACTIVE_IMPROVEMENTS_REPORT.md  PROJECT_COMPLETION.txt  PROJECT_SUMMARY.txt  README_INVESTIGATION.md  RECOMMENDATIONS.md  TRIANGULAR_GRID_CONCEPT.md  VARIANT_EXAMPLES.md  analyze_move_generation.py  benchmark_agents.py  benchmark_all_minimax.py  benchmark_minimax_depths.py  benchmark_move_time.py  compare_heuristic_vs_minimax.py  compare_top_agents.py  comprehensive_tournament.py  extended_tournament.py  pyproject.toml  (+11 more)
config/: game_config.yaml
docs/: AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  GAME_DESIGN_FAULT_LINES.md  GAME_DESIGN_INFLUENCE_HEX.md  GAME_DESIGN_STRATEGIC_DOMINION.md  GAME_DESIGN_TRIANGULAR_ASSAULT.md  GAME_MANUAL.md  NEW_GAME_SUGGESTIONS.md  README.md  ROLLING_SCORE_VARIANT.md  TESTING.md  TOURNAMENTS.md
docs/game-concepts/: place-or-attack-design.md
src/march_of_empires/: __init__.py  config.py  engine.py  game.py  tournament.py  types.py
tests/: __init__.py  conftest.py
(+67 files in other folders)
