[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strategic-influence"
version = "0.1.0"
description = "A turn-based territorial strategy game with probabilistic mechanics"
readme = "GAME_MANUAL.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
strategic-influence = "strategic_influence.cli.app:main"
si-visualizer = "strategic_influence.visualizer.app:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/strategic_influence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
